--- a/Mission11_ajames26/Views/Purchase/Checkout.cshtml
+++ b/Mission11_ajames26/Views/Purchase/Checkout.cshtml
@@ -6,7 +6,7 @@
 <h2>Checkout</h2>
 <p>Please enter your details so we can send your books to the right place.</p>
 
-<form method="post">
+<form method="post" asp-controller="Purchase" asp-action="Checkout">
 
     <h4>Ship To</h4>
     <div class="form-group">
