Added a cart summary to the top of the screen.

--- a/Mission11_ajames26/Pages/Purchase.cshtml
+++ b/Mission11_ajames26/Pages/Purchase.cshtml
@@ -2,7 +2,7 @@
 @model Mission11_ajames26.Pages.PurchaseModel
 @{
 }
-
+@*I really should have called this page "Cart" instead of "Purchase," but I guess you don't always win.*@
 <h2>Cart</h2>
 
 <div class="alert alert-success alert-dismissible">
